Added login Screen and authentication service

--- a/ClientApp/src/app/login/login.component.css
+++ b/ClientApp/src/app/login/login.component.css
@@ -1,12 +1,4 @@
-.task-header {
-    background-color: rgb(244, 97, 74);
-    padding: 0px;
-    height: 20px;
-    width: 100%;
-    font-family: Robo-medium !important;
-    font-weight: bold;
-  }
-  
+
 
   
   .form-field {
@@ -14,12 +6,14 @@
     width: 200px;
   }
   
+  .warning-wrapper {
+    overflow: hidden; 
+    text-align: center;
+  }
   .error-msg {
-  
-    padding: 10px;
     color: red;
     font-size: smaller;
-  
+    display: inline-block;
   }
   
   
