--- a/ClientApp/src/app/account/account.component.html
+++ b/ClientApp/src/app/account/account.component.html
@@ -1,23 +1,25 @@
 <mat-card>
     <mat-card-header>
-        <div style="display:inline-block;vertical-align:top;">
-            <div mat-card-avatar class="example-header-image"></div>
-        </div>
+        
         <div style="display:inline-block;">
             <mat-card-title>Account Information</mat-card-title>
-            <mat-divider style="margin: 20px;"></mat-divider>
         </div>
        
     </mat-card-header>
 
     <mat-card-content>
+
+        <div style="display:inline-block;vertical-align:top;">
+            <div mat-card-avatar class="example-header-image"></div>
+        </div>
+        <div style="display:inline-block;">
+           <div style="font-weight: bold;">Username</div>
+           <div>{{accountForm.get("emailAddress").value}}</div>
+            
+        </div>
      
         <form [formGroup]="accountForm" style="margin-top: 40px;"> 
-        <mat-form-field class="justifier" appearance="legacy">
-            <mat-label>E-mail Adress</mat-label>
-            <input matInput formControlName = "emailAddress" class="form-input">
-            <mat-error>An email is required</mat-error>
-        </mat-form-field>
+        
        
 
         <mat-form-field class="justifier" appearance="legacy">
@@ -45,13 +47,30 @@
     </form>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>EDIT</button>
+
+    <div *ngIf = "accountForm.disabled">
+      <button mat-raised-button
+            (click)="accountForm.enable()">
+            EDIT</button>
+    </div>
+    <div *ngIf = "accountForm.enabled">
+        <button mat-raised-button
+            (click)="accountForm.disable()">
+            CANCEL</button>
+        <button mat-raised-button
+            [disabled] = "accountForm.pristine"
+            style="float: right;"
+            (click)="updateUser()">
+            SAVE</button>
+    </div>
+    
+
     </mat-card-actions>
   </mat-card>
 
 <div class="game-wrapper">
  <mat-accordion>
-  <mat-expansion-panel hideToggle>
+  <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title>
         My Games
@@ -62,7 +81,9 @@
     </mat-expansion-panel-header>
 
 
-    <div class="flex-container" fxLayout = "row">
+    <div class="flex-container" 
+    fxLayout = "row wrap"
+    fxLayoutGap ="5px">
     <mat-card *ngFor="let game of userGames" class="game-card" >
     <img mat-card-image [src]="game.thumbnail" class="card-img">
     <mat-card-content class= "card-content">
