--- a/ClientApp/src/app/account/account.component.css
+++ b/ClientApp/src/app/account/account.component.css
@@ -10,10 +10,9 @@
     background-color: #363737;
     color: white;
     margin-top: 5px;
-   
-    
     
 } 
+
 .mat-input-element:disabled {
     color: black!important;
 }
@@ -33,8 +32,8 @@
     margin-bottom: 40px;
 }
 
-.selected-card {
-    box-shadow: 0 8px 8px 8px rgba(0,0,0,.2), 0 8px 8px 0 rgba(0,0,0,.14), 0 8px 8px 0 rgba(0,0,0,.12) !important;
-    transform: translate3d(0,0,0);
-    transition: background .4s cubic-bezier(.25,.8,.25,1),box-shadow 280ms cubic-bezier(.4,0,.2,1);
+.edit-user-btn {
+    border: none;
+    outline:none;
+
   }
