Added Change Email dialog window

--- a/ClientApp/src/app/account/account.component.html
+++ b/ClientApp/src/app/account/account.component.html
@@ -25,7 +25,7 @@
               <mat-icon>visibility_off</mat-icon>
               <span>Change Password</span>
             </button>
-            <button mat-menu-item class="edit-user-btn">
+            <button mat-menu-item class="edit-user-btn" (click)="updateUserEmail()">
               <mat-icon>alternate_email</mat-icon>
               <span>Change Email</span>
             </button>
