--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -29,7 +29,7 @@
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/admin']"
-              >Adminstration Console</a
+              >Admin Tools</a
             >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
