--- a/ClientApp/src/app/account/account.component.html
+++ b/ClientApp/src/app/account/account.component.html
@@ -1,4 +1,5 @@
-<mat-card>
+
+<mat-card class = "card">
     <mat-card-header>
         
         <div style="display:inline-block;">
@@ -85,7 +86,7 @@
   </mat-card>
 
 <div class="game-wrapper">
- <mat-accordion>
+ <mat-accordion class = "card">
   <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title>
@@ -99,7 +100,8 @@
 
     <div class="flex-container" 
     fxLayout = "row wrap"
-    fxLayoutGap ="5px">
+    fxLayoutGap ="5px"
+    fxLayoutAlign="center center">
     <mat-card *ngFor="let game of userGames" class="game-card" >
     <img mat-card-image [src]="game.thumbnail" class="card-img">
     <mat-card-content class= "card-content">
@@ -115,4 +117,3 @@
   </mat-expansion-panel>
 </mat-accordion>
 </div>
-
