--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -15,7 +15,11 @@ code {
   border-color: #1861ac;
 }
 
-html, body { height: 100%; }
+html, body { 
+  height: 100%; 
+  background-color: rgb(237, 240, 251);
+}
+
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 body{
@@ -34,18 +38,25 @@ body{
 .form-wraper{
   width: 100%;
   margin-top: 2%;
+ 
 }
+
 .form-container{
   width: 35%;
   margin: auto;
   padding-bottom: 24px !important;
   display: block;
   background: rgb(253, 253, 253);
+ 
 }
 .card {
   border-radius: 2px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
 
 /** form header **/
@@ -91,9 +102,7 @@ body{
   background: #3f51b5;
   color: #fff;
 }
-.google-icon{
-  width: 6%;
-}
+
 .txt{
   text-align: center;
   color: #333;
@@ -196,4 +205,14 @@ a{
   .btn{
       font-size: 1em;
   }
+}
+
+@font-face {
+  font-family: Robo-black;
+  src: url(../src/assets/fonts/Roboto-Black.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: Robo-black;
+  src: url(../src/assets/fonts/ubisoftsans-regular.otf) format('truetype');
 }
