Added Admin tools page with table

--- a/ClientApp/src/app/redeem-key-dialog/redeem-key-dialog.component.css
+++ b/ClientApp/src/app/redeem-key-dialog/redeem-key-dialog.component.css
@@ -12,9 +12,10 @@
 }
   .error-msg {
   
-    padding: 10px;
     color: red;
     font-size: smaller;
+    text-align: center;
+    margin-bottom: 5px;
   
   }
 
