--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -28,7 +28,7 @@
             <a class="nav-link text-dark" [routerLink]="['/account']">Account Information</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/admin']"
+            <a class="nav-link text-dark" [routerLink]="['/admin-console']"
               >Admin Tools</a
             >
           </li>
