Added reset-password dialog

--- a/ClientApp/src/app/account/account.component.html
+++ b/ClientApp/src/app/account/account.component.html
@@ -14,7 +14,7 @@
             <div mat-card-avatar class="example-header-image"></div>
         </div>
         <div style="display:inline-block;">
-           <div style="font-weight: bold;">Username</div>
+           <div style="font-weight: bold; opacity: 0.4;">Username</div>
            <div>{{accountForm.get("emailAddress").value}}</div>   
         </div>
 
