RESET password functionality now works

--- a/ClientApp/src/app/dialogs/reset-password-dialog/reset-password-dialog.component.html
+++ b/ClientApp/src/app/dialogs/reset-password-dialog/reset-password-dialog.component.html
@@ -5,22 +5,20 @@
                 <div class="header-row">Change Password:</div>
             </mat-toolbar-row>
             <mat-toolbar-row>
-                <div class="header-row">{{userResource["Full Name"]}}</div>
+                <div class="header-row">{{userResource.fullName}}</div>
             </mat-toolbar-row>
         </mat-toolbar>
     </h1>
 
     <div mat-dialog-content class="form-wrapper">
-        
-        <form [formGroup]="changePasswordForm" (ngSubmit)=" changePassword()">
-
+        <form [formGroup]="resetPasswordForm" (ngSubmit)=" resetPassword()">
+            {{userResource | json}}
             <mat-form-field class="justifier" appearance="legacy">
                 <mat-label>New Password</mat-label>
                 <input matInput formControlName = "password" [type]="hide ? 'password' : 'text'">
                 <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                 <mat-error>A new password is required</mat-error>
             </mat-form-field>
-            
     
             <mat-form-field class="justifier" appearance="legacy">
                 <mat-label>Confirm New Password</mat-label>
@@ -31,7 +29,7 @@
 
             <button mat-raised-button color="primary"  
             type="submit"
-            [disabled]= "!changePasswordForm.valid">
+            [disabled]= "!resetPasswordForm.valid">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Update</button>
     
