Refactored some code and files

--- a/ClientApp/src/app/login/login.component.html
+++ b/ClientApp/src/app/login/login.component.html
@@ -34,7 +34,7 @@
                 Login</button>
             </div>
             <div class="additional-link">
-                <a routerLink="/signup">No Account? <strong>Create one here</strong></a>
+                <a routerLink="/login">No Account? <strong>Create one here</strong></a>
             </div>
         </form>
     </div>
