--- a/ClientApp/src/app/admin-console/admin-console.component.html
+++ b/ClientApp/src/app/admin-console/admin-console.component.html
@@ -25,10 +25,9 @@
             </ng-template>
             </td>
         </ng-container>  
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
       <mat-paginator [pageSizeOptions]="[5, 10, 25,dataSource.data.length]" showFirstLastButtons></mat-paginator>
     </div>
-  </div>
-<div>
+</div>
