Fixed authentication bug

--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -48,7 +48,7 @@
           class="nav-item" 
           [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark">
-            | {{username}}</a>
+            | {{username}} <span *ngIf="isAdmin">[ADMIN]</span></a>
           </li>
         </ul>
       </div>
