Fixed the posistion of redeem button and bug on edit user button in admin console

--- a/ClientApp/src/app/account/account.component.html
+++ b/ClientApp/src/app/account/account.component.html
@@ -102,15 +102,15 @@
           </mat-card-content>
         </mat-card>
       </div>
-
-      <button mat-raised-button
-        (click)="reedemKey()"
-        style="margin-top: 20px; display: flex!important;"
-        color="primary" >
-        REDEEM KEY</button>
-
+      <div class="redeemBtn">
+        <button mat-raised-button
+          (click)="reedemKey()"
+          color="primary" >
+          REDEEM KEY</button>
+        </div>
     </mat-expansion-panel>
     
   </mat-accordion>
 </div>
+
 
