Adding Additional Comments to code

--- a/ClientApp/src/app/account/dialogs/change-email-dialog/change-email-dialog.component.html
+++ b/ClientApp/src/app/account/dialogs/change-email-dialog/change-email-dialog.component.html
@@ -1,3 +1,4 @@
+<!-- Dialog box header -->
 <div>
     <h1 mat-dialog-title>
         <mat-toolbar class="task-header" color="primary">
@@ -7,6 +8,7 @@
         </mat-toolbar>
     </h1>
 
+    <!-- Change Email form  -->
     <div mat-dialog-content class="form-wrapper">
         
         <form [formGroup]="changeEmailForm" (ngSubmit)=" changeEmail()">
