--- a/ClientApp/src/app/account/dialogs/change-password-dialog/change-password-dialog.component.html
+++ b/ClientApp/src/app/account/dialogs/change-password-dialog/change-password-dialog.component.html
@@ -1,3 +1,4 @@
+<!-- Dialog box header -->
 <div>
     <h1 mat-dialog-title>
         <mat-toolbar class="task-header" color="primary">
@@ -7,6 +8,7 @@
         </mat-toolbar>
     </h1>
 
+    <!-- change password form    -->
     <div mat-dialog-content class="form-wrapper">
         
         <form [formGroup]="changePasswordForm" (ngSubmit)=" changePassword()">
