--- a/ClientApp/src/app/admin-console/dialogs/add-revoke-game-dialog/add-revoke-game-dialog.component.html
+++ b/ClientApp/src/app/admin-console/dialogs/add-revoke-game-dialog/add-revoke-game-dialog.component.html
@@ -1,4 +1,5 @@
 <div>
+    <!-- Dialog box header -->
     <h1 mat-dialog-title>
         <mat-toolbar class="task-header" color="primary">
             <mat-toolbar-row>
@@ -10,6 +11,7 @@
         </mat-toolbar>
     </h1>
 
+    <!-- ADD / REVOKE form    -->
     <div mat-dialog-content class="form-wrapper">
         <form [formGroup]="editGameForm">
             
@@ -23,6 +25,7 @@
                 <mat-radio-button value="REVOKE" color = "primary" class="radioButtons" (click)="setGameAction('REVOKE')"> REVOKE </mat-radio-button>
             </mat-radio-group>
             
+            <!-- ADD game Form -->
             <ng-container *ngIf = "gameAction == 'ADD'" formGroupName = "adding">
                 <mat-form-field class="justifier" appearance="legacy">
                     <mat-label>Add Game</mat-label>
@@ -39,6 +42,7 @@
                 Add</button>
             </ng-container>
 
+            <!-- REVOKE game Form -->
             <ng-container *ngIf ="gameAction == 'REVOKE'" formGroupName = "revoking">
                 <mat-form-field class="justifier" appearance="legacy">
                     <mat-label>Revoke Game</mat-label>
