--- a/ClientApp/src/app/admin-console/dialogs/reset-password-dialog/reset-password-dialog.component.html
+++ b/ClientApp/src/app/admin-console/dialogs/reset-password-dialog/reset-password-dialog.component.html
@@ -1,3 +1,4 @@
+<!-- Dialog box header -->
 <div>
     <h1 mat-dialog-title>
         <mat-toolbar class="task-header" color="primary">
@@ -9,7 +10,7 @@
             </mat-toolbar-row>
         </mat-toolbar>
     </h1>
-
+    <!-- Reset password form    -->
     <div mat-dialog-content class="form-wrapper">
         <form [formGroup]="resetPasswordForm" (ngSubmit)=" resetPassword()">
          
@@ -30,7 +31,7 @@
             <button mat-raised-button color="primary"  
             type="submit"
             [disabled]= "!resetPasswordForm.valid">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Update</button>
     
             <button mat-button 
