--- a/ClientApp/src/app/login/login.component.html
+++ b/ClientApp/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 
-
+<!-- Login Form -->
  <div class="form-wraper">    
         <form [formGroup]="loginForm" (ngSubmit)="login()" class="form-container card">
             
