--- a/ClientApp/src/app/account/dialogs/redeem-key-dialog/redeem-key-dialog.component.html
+++ b/ClientApp/src/app/account/dialogs/redeem-key-dialog/redeem-key-dialog.component.html
@@ -1,3 +1,4 @@
+<!-- Dialog box header -->
 <div>
     <h1 mat-dialog-title>
         <mat-toolbar class="task-header" color="primary">
@@ -6,7 +7,7 @@
             </mat-toolbar-row>
         </mat-toolbar>
     </h1>
-
+<!-- Redeem Key form    -->
     <div mat-dialog-content class="form-wrapper">
         
         <form [formGroup]="redeemKeyForm" (ngSubmit)=" redeemKey()">
