--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -1,8 +1,3 @@
-
-
-/* You can add global styles to this file, and also import other style files */
-
-/* Provide sufficient contrast against white background */
 a {
   color: #0366d6;
 }
@@ -114,6 +109,8 @@ body{
   text-align: center;
 }
 
+/* Dialog design */
+
 .custom-dialog-container .mat-dialog-container {
   padding: 0px;
   width: 300px;
@@ -138,11 +135,5 @@ a{
   color: white;
 
 }
-
-
-/*
-##Device = Desktops
-##Screen = 1281px to higher resolution desktops
-*/
 
 
